--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <antlr-runtime-version>4.6</antlr-runtime-version>
     <antlr-mvn-plugin-version>4.6</antlr-mvn-plugin-version>
     <scala-version>2.11.8</scala-version>
+    <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
+        <maven.enforcer.plugin.version>1.3.1</maven.enforcer.plugin.version>
     </properties>
 
     <dependencies>
@@ -51,11 +53,17 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>${maven.enforcer.plugin.version}</version>
+            </plugin>
+            <plugin>
                 <groupId>com.tunnelvisionlabs</groupId>
                 <artifactId>antlr4-maven-plugin</artifactId>
                 <version>${antlr-mvn-plugin-version}</version>
                 <configuration>
                     <visitor>true</visitor>
+                    <libDirectory>${basedir}/src/main/antlr4/sqlParser</libDirectory>
                     <includes>
                         <include>**/SqlLexer.g4</include>
                     </includes>
@@ -72,9 +80,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <compilerVersion>1.8</compilerVersion>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -119,13 +129,6 @@
                         <arg>-deprecation</arg>
                         <arg>-feature</arg>
                     </args>
-                    <javacArgs>
-                        <javacArg>-source</javacArg>
-                        <javacArg>${java.version}</javacArg>
-                        <javacArg>-target</javacArg>
-                        <javacArg>${java.version}</javacArg>
-                        <javacArg>-Xlint:all,-serial,-path</javacArg>
-                    </javacArgs>
                 </configuration>
             </plugin>
         </plugins>
